--- a/src/routes/projects/projects-list/ProjectsList.css
+++ b/src/routes/projects/projects-list/ProjectsList.css
@@ -4,6 +4,7 @@
 }
 
 .thumbnail {
+  display: block;
   width: 100%;
   height: 248px;
   object-fit: cover
@@ -22,7 +23,7 @@
   cursor: pointer;
   padding: var(--spacing);
   text-align: left;
-
+  align-self: flex-start;
 }
 
 .project-title {
